--- a/src/main/resources/locale/locale_en.properties
+++ b/src/main/resources/locale/locale_en.properties
@@ -17,3 +17,15 @@ password.size=Password must be between {min} and {max} characters long.
 
 firstName.size=First name must be between {min} and {max} characters long.
 lastName.size=Last name must be between {min} and {max} characters long.
+
+profile.link=Profile
+profile.header=Your profile
+profile.login=Login:
+profile.email=Email:
+profile.firstName=First name:
+profile.lastName=Last name:
+profile.avatar=Avatar:
+profile.addAvatar=Add new avatar
+
+button.save=Save
+button.cancel=Cancel
