Added a feature to change the password on user's profile. Added email field on register form

--- a/src/main/resources/locale/locale_en.properties
+++ b/src/main/resources/locale/locale_en.properties
@@ -10,6 +10,7 @@ login.signup=Sign Up →
 register.title=Sign Up
 register.password=Password
 register.confirm.password=Confirm password
+register.email=Email
 register.submit=Signup
 
 username.size=Username must be between {min} and {max} characters long.
@@ -21,6 +22,9 @@ lastName.size=Last name must be between {min} and {max} characters long.
 profile.link=Profile
 profile.header=Your profile
 profile.login=Login:
+profile.password.new=New password
+profile.password.confirm=Confirm password
+profile.password.old=Old password
 profile.email=Email:
 profile.firstName=First name:
 profile.lastName=Last name:
