--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -10,6 +10,7 @@ login.signup=Регистрация →
 register.title=Регистрация
 register.password=Пароль
 register.confirm.password=Подтвердите пароль
+register.email=Email
 register.submit=Зарегистрироваться
 
 username.size=Логин должен состоять из {min} до {max} символов.
@@ -19,6 +20,9 @@ lastName.size=Фамилия должна состоять из {min} - {max} с
 profile.link=Ваш профиль
 profile.header=Ваш профиль
 profile.login=Логин:
+profile.password.new=Новый пароль
+profile.password.confirm=Повторите новый пароль
+profile.password.old=Старый пароль
 profile.email=Email:
 profile.firstName=Имя:
 profile.lastName=Фамилия:
